Logout functionality added
