# src/controllers/routes/loginRoute.ts
@@ -1,7 +1,8 @@
 import { Application } from "express";
-import { loginUser, getLoggedInUser } from "../loginController";
+import { loginUser, getLoggedInUser, logoutUser } from "../loginController";
 
 export const loginRoute = (app: Application): void => {
   app.post("/api/login", loginUser);
   app.get("/api/user", getLoggedInUser);
+  app.post("/api/logout", logoutUser);
 };
