# swagger/auth.json
@@ -208,6 +208,62 @@
                     }
                 }
             }
-        }
+        },
+        "/api/logout": {
+            "post": {
+              "tags": [
+                "Login"
+              ],
+              "summary": "Logout a user",
+              "operationId": "logoutUser",
+              "responses": {
+                "200": {
+                  "description": "User logged out successfully",
+                  "content": {
+                    "application/json": {
+                      "schema": {
+                        "type": "object",
+                        "properties": {
+                          "message": {
+                            "type": "string"
+                          }
+                        }
+                      }
+                    }
+                  }
+                },
+                "401": {
+                  "description": "Not logged in",
+                  "content": {
+                    "application/json": {
+                      "schema": {
+                        "type": "object",
+                        "properties": {
+                          "message": {
+                            "type": "string"
+                          }
+                        }
+                      }
+                    }
+                  }
+                },
+                "500": {
+                  "description": "Error logging out",
+                  "content": {
+                    "application/json": {
+                      "schema": {
+                        "type": "object",
+                        "properties": {
+                          "message": {
+                            "type": "string"
+                          }
+                        }
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          }          
     }
 }
